# nous-news-node

./: .env.example  .gitignore  README.md  biome.json  docker-compose.yml  package.json  start-node.sh
node-app/: .env.example  .gitignore  Dockerfile  (+1 more)
python-ai/: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py
python-ai/scripts/: run_tests.sh
python-ai/src/ai/: __init__.py  analyze_article.py  antithesis.py  app.py  cognitive_bias.py  config.py  extract_tags.py  models.py  models_prefetch.py  normalize.py  philosophy.py  political_bias.py  sentiment.py  summarization.py  tokenizer.py  translate.py  types.py
python-ai/src/ai/constants/: languages.py
python-ai/src/ai/prompts/: antithesis_prompt.py  cognitive_bias_prompt.py  philosophical_prompt.py  political_bias_prompt.py  sentiment_prompt.py  summarization_prompt.py  tags_prompt.py  translation_prompt.py
python-ai/src/ai/runners/: __init__.py  llm_json_runner.py
python-ai/src/ai/services/: __init__.py  analyze_article.py  antithesis.py  cognitive_bias.py  extract_tags.py  normalize.py  philosophical.py  political_bias.py  sentiment.py  summarization.py  topic_coverage.py  translate.py
python-ai/src/ai/utils/: __init__.py  clean_html.py  device.py  tokenizer.py  translation.py
python-ai/src/tests/: test_ai.py  test_antithesis.py  test_article_analysis.py  test_cognitive_bias.py  test_model_download.py  test_normalization.py  test_philosophical.py  test_political_bias.py  test_sentiment.py  test_summarization.py  test_translation.py  test_utils.py
(+158 files in other folders)
